--- a/src/styles/common/bulma.css
+++ b/src/styles/common/bulma.css
@@ -985,7 +985,8 @@ a.has-text-danger:hover, a.has-text-danger:focus {
   padding: 1rem; }
 
 a.box-feed:hover, a.box-feed:focus {
-  box-shadow: 0 0.5em 1em -0.125em rgba(10, 10, 10, 0.1), 0 0 0 1px var(--link); }
+  box-shadow: 0 0.5em 1em -0.125em rgba(10, 10, 10, 0.1), 0 0 0 1px var(--link); 
+}
 
 a.box-feed:active {
   box-shadow: inset 0 1px 2px rgba(10, 10, 10, 0.2), 0 0 0 1px var(--link); }
