--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -2,3 +2,12 @@
 	margin: 2rem 0 !important;
 	padding: 0;
 }
+
+.home-title {
+  text-align: center;
+}
+
+.home-lead {
+  text-align: center;
+}
+
